Own words + images

--- a/mythesis.tex
+++ b/mythesis.tex
@@ -105,7 +105,7 @@
 %\tarkastaja{H.H.}
 
 \title{Mass and radius constraints for neutron stars
-from pulse shape modelling}
+from pulse shape modeling}
 \opinnayte{Master Thesis}
 \author{Tuomo Salmi}
 \vuosi{2016}
@@ -146,7 +146,7 @@ from pulse shape modelling}
         {Department of Physics and Astronomy}%
         {Salmi, Tuomo}%
         {Mass and radius constraints for neutron stars
-from pulse shape modelling}
+from pulse shape modeling}
         {Master's thesis, \pageref{LastPage} s., 3 Appendices}%
         {Astronomy}% Oppiaine
         {September 2016}%
@@ -236,7 +236,7 @@ Näitä noudattamalla saadaan vähennettyä ainakin yksi tarkastuskierros.
 
 
 Neutron stars are some of the densest and most massive objects in the
-universe. Typical mass of a neutron star ($M$) is on the order of 1.5 solar masses ($M_{\odot}$), and typical radius ($R$) on the order of 12 km. The central density $n_{c}$ can be from 5 to 10 times the nuclear equilibrium density $n_{0} \approx 0.16 \mathrm{fm}^{-3}$ of neutrons and protons found in laboratory nuclei ~\cite{lattimer}. Neutrons dominate the nucleonic component of neutron stars, but also some protons, electrons and muons exist. At the supernuclear densities also more exotic baryons, mesons or quarks may appear. The composition of the innermost core of the neutron star is still unknown. Superfluidity and/or superconductivity of the fermions are in any case excepted inside the star. 
+universe. Typical mass of a neutron star ($M$) is on the order of 1.5 solar masses ($M_{\odot}$), and typical radius ($R$) on the order of 12 km. The central density $n_{c}$ can be from 5 to 10 times the nuclear equilibrium density $n_{0} \approx 0.16 \mathrm{fm}^{-3}$ of neutrons and protons found in laboratory nuclei \cite{lattimer}. Neutrons dominate the nucleonic component of neutron stars, but also some protons, electrons and muons exist. At the supernuclear densities also more exotic baryons, mesons or quarks may appear. The composition of the innermost core of the neutron star is still unknown. Superfluidity and/or superconductivity of the fermions are in any case excepted inside the star. 
 
  
 Neutron stars are created after the gravitational collapse of the core of a
@@ -246,8 +246,8 @@ massive star (>8$M_{\odot}$) at the end of its life, when the collapse triggers 
  \end{equation} 
 where $G$ is the gravitational constant and $c$ is the speed of light, constrains the possible mass and radius of neutron stars.
 
-A more strict upper bound to the compactness (ratio between mass and radius) of the star follows
-the fact ~\cite{rhoades} %(/PhysRevLett.32.324 )
+A more strict upper bound to the compactness (ratio between radius and mass) of the star follows
+the fact \cite{rhoades} %(/PhysRevLett.32.324 )
 that the speed of sound in dense matter has to be less than the speed of light. This gives us the so called causality condition
 \begin{equation}
  R \gtrsim \frac{3GM}{c^{2}}.
@@ -268,7 +268,10 @@ and
 \begin{equation}
  \frac{dm(r)}{dr} = 4 \pi \rho r^{2},
  \end{equation}
-where $P$ and $\rho$ are the pressure and mass-energy density, respectively, and $m(r)$ is the gravitational mass enclosed within a radius $r$. M-R relation can now be obtained if the relation between pressure and density $P=P(\rho)$ is known. The relation we call the equation of state (EOS). For a realistic EOS the previous equations must be numerically solved to obtain M-R relation. These can be separated into three categories according to the compressibility of the matter: soft, moderate and stiff equations of state. The determination of the EOS would thus allow us to find out the structure of neutron star and the properties of the nucleonic matter inside it \cite{akmal}. The sample of possible EOS can be reduced by using observations to constrain masses and radii of neutron stars.
+where $P$ and $\rho$ are the pressure and mass-energy density, respectively, and $m(r)$ is the gravitational mass enclosed within a radius $r$. M-R relation can now be obtained if the relation between pressure and density $P=P(\rho)$ is known. The relation we call the equation of state (EOS). For a realistic EOS the previous equations must be numerically solved to obtain M-R relation. These can be separated into three categories according to the compressibility of the matter: soft, moderate and stiff equations of state. The determination of the EOS would thus allow us to find out the structure of neutron star and the properties of the nucleon matter inside it \cite{akmal}. The number of possible EOS can be reduced by observing which masses and radii the EOS should be able to produce.
+
+
+%using observations to constrain masses and radii of neutron stars.
 
 %This is "rhoades":
 %http://journals.aps.org/prl/pdf/10.1103/PhysRevLett.32.324 %link works in Tuorla
@@ -293,24 +296,32 @@ where $P$ and $\rho$ are the pressure and mass-energy density, respectively, and
 %https://arxiv.org/pdf/1206.2727v4.pdf
 
 
-Since the discovery of neutron stars as radio pulsars
-in 1967, many different classes have been discovered including low mass X-ray binaries (LMXBs). In LMXBs the neutron star accretes matter from a non-collapsed stellar companion (with mass M $\gtrsim  M_{\odot}$) via an accretion disk. Accreting millisecond X-ray pulsars (AMXPs) is a subgroup of the LMXBs, in which the gas stripped from the companion is channeled out of the accretion disk onto the magnetic poles of the rotating neutron star. This gives rise to the X-ray pulsations at the spin frequency of the neutron star. By definition AMXPs are also spinning at frequencies $\nu \ge 100 \, \mathrm{Hz}$ and have weak surface magnetic fields ($B \sim 10^{8-9}$) ~\cite{patruno}. All known AMXPs have donor stars that transfer mass via Roche lobe overflow. 
+Rotating neutron stars were first detected as radio pulsars in 1967. %\cite{gold68} %http://adsabs.harvard.edu/abs/1968Natur.218..731G
+After that many different classes of pulsars have been discovered including low mass X-ray binaries (LMXBs). LMXB is a system in which the neutron accretes matter from a non-collapsed companion (with a relatively low mass $M \lesssim  M_{\odot}$) via an accretion disk. Accreting millisecond X-ray pulsars (AMXPs) is a subgroup of the LMXBs, in which the gas from the accretion disk (stripped from the companion) is channeled onto the magnetic poles of a rapidly rotating neutron star. This gives rise to the X-ray pulsations typically with periods of a few milliseconds corresponding the spin frequency of the neutron star. By definition AMXPs are spinning at frequencies $\nu \ge 100 \, \mathrm{Hz}$ and have weak surface magnetic fields ($B \sim 10^{8-9}$) ~\cite{patruno}. 
+
+The transfer of mass occurs in all known AMXPs via Roche lobe overflow from the donor star. The equipotential surface of the binary systems gravitational and centrifugal forces (surrounding the star) is known as Roche lobe. Both the neutron star and the companion have their own lobes that  only join at a inner Lagrangian point $L_{1}$.%\cite{frank85} http://adsabs.harvard.edu/abs/1985Sci...230.1269F (book in Tuorla)
+In the case when the Roche lobe of the companion is fulfilled by matter, the gas starts to flow through to the Lagrangian point. An accretion disk is formed because of the rotation of the pulsar.
+ 
+
+The first AMXP discovered was SAX J1808.4–3658. It is also the main observed target in this thesis. The source was first found in 1996 by the Italian-Dutch BeppoSAX satellite %%cite{zandsax1808} %http://adsabs.harvard.edu/abs/1998A%26A...331L..25I
+The first coherent pulsations (at 401 Hz) were detected during the second outburst with Rossi X-ray Timing Explorer (RXTE) in 1998. %cite{wijnandssax1808} http://adsabs.harvard.edu/abs/1998Natur.394..344W
+It provided a confirmation of the "recycling scenario", which states that AMXPs are the evolutionary progenitors of recycled radio millisecond pulsars. They are responsible for the conversion of slowly rotating neutron stars with high magnetic field ($B \sim 10^{12}$), into a rapidly spinning objects with a relatively weak magnetic field ($B \sim 10^{8}$) ~\cite{patruno}. The idea is that a weakening magnetic field allows accretion to happen, which results in a increase of the spin frequency of the pulsar.
 
 
+%SAX J1808.4–3658 went into outburst again in 2000, 2002, 2005, 2008 and 2011,
+%with an approximate recurrence time of about 1.6-3.3 yr, and is the best sampled and
 
-The first AMXP discovered was SAX J1808.4–3658. It is also the main observed target in this thesis. The source was first found in 1996 by the Italian-Dutch BeppoSAX satellite, but the first coherent pulsations (at 401 Hz) were detected during the second outburst with Rossi X-ray Timing Explorer (RXTE) in 1998.  It provided a confirmation of the "recycling scenario", which states that AMXPs are the evolutionary progenitors of recycled radio millisecond pulsars. They are responsible for the conversion of slow neutron stars with high magnetic field ($B \sim 10^{12}$), into a rapidly spinning objects with a relatively weak magnetic field ($B \sim 10^{8}$) ~\cite{patruno}. 
+After the two first outbursts SAX J1808.4–3658 has gone into outburst several times reoccurring approximately every two or three years. It is the best sampled and studied out of all AMXPS. Typically the outburst consists of five phases: a fast rise, with a steep increase in luminosity lasting only a few days, a peak, a slow decay stage, a fast decay phase and the flaring tail. Except the last phase, they can in principle be partially explained with the disk instability model.
+
+%The typical outburst can be split in five phases: a
+%fast rise, with a steep increase in luminosity lasting only a few days, a peak, a slow
+%decay stage, a fast decay phase and the flaring tail. Except the last phase, they can in %principle be partially explained with the disk instability model. 
+
+%pulse profiles from which %phase?
 
 
-SAX J1808.4–3658 went into outburst again in 2000, 2002, 2005, 2008 and 2011,
-with an approximate recurrence time of about 1.6-3.3 yr, and is the best sampled and
-studied of all AMXPs. The typical outburst can be split in five phases: a
-fast rise, with a steep increase in luminosity lasting only a few days, a peak, a slow
-decay stage, a fast decay phase and the flaring tail. Except the last phase, they can in principle be partially explained with the disk instability model. %pulse profiles from which phase?
-
-
-The X-ray spectrum of the outbursts have also been analysed and there is evidence for a two component-model: a blackbody at soft energies and a hard Comptonization component at higher energies ~\cite{twocompmod} %http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
-. The blackbody is interpreted as the heated hot spot on the neutron star surface and the Comptonization is produced in a accretion shock. This shock is created at the bottom of the magnetic field lines as the plasma abruptly decelerates close to the neutron star surface.
-
+The X-ray spectrum of the outbursts have also been analysed and there is evidence for a two component-model, which includes a blackbody at lower energies and a hard Comptonization component at higher energies ~\cite{twocompmod} %http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
+. The heated hot spot on the neutron star surface is interpreted to produce the blackbody flux. The Comptonization is produced above the spot in a accretion shock. This shock is created as the plasma abruptly decelerates close to the neutron star surface at the bottom of the magnetic field lines.
 
 
 
@@ -341,23 +352,31 @@ have revealed the possible presence of jets.
 
 \section{Methods}
 
-\subsection{Pulse profile modelling}
+There have been many different attempts to constrain the masses and radii of neutron stars and thus also the possible equations of state. For example one approach is the so called cooling tail method, where the observed cooling tracks of thermonuclear X-ray bursts are compared to the accurate theoretical atmosphere model calculations \cite{nattila_bayes}. One other approach to measure $M$ and $R$ is to fit detailed spectral models to high-precision measurements of X-ray burst spectra. %\cite{madej} %http://adsabs.harvard.edu/abs/2005AcA....55..349M
+This however requires very high-precision spectral data. 
 
-The oscillations in the flux during the outbursts (the light curves) of accreting millisecond pulsars (described in the first chapter) can be modelled with different models. The model presented here assumes that the radiation is originated from one or two polar spots locating at the polar caps of the stars. General and special relativistic effects have been taken account using so called Schwarzschild-Doppler (S+D) approximation (Miller, Lamb 1998, Poutanen, Gierlinski 2003)~\cite{poutagierlinskisax}. In the S+D approximation the gravitational light-bending effects are modelled as though the star is not rotating using the Schwarzschild metric and the formalism prescribed by
-Pechenick, Ftaclas and Cohen (1983)~\cite{pechenick}. 
-Rotational effects are added by introducing Doppler terms as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
+The approach we use here is to fit pulse profile models to observations of these pulses during a X-ray burst. In this section we first present our waveform model and then the Bayesian methods we use to get constraints for the parameters of the model. The final aim is to combine constraints obtained with different approaches.
+
+\subsection{Pulse profile modeling}
+
+
+The oscillations in the flux during the outbursts (the light curves) of accreting millisecond pulsars (described in the first chapter) can be modeled with different models. The model presented here assumes that the radiation is originated from one or two polar spots locating at the polar caps of the stars. General and special relativistic effects have been taken account using so called Schwarzschild-Doppler (S+D) approximation (Miller, Lamb 1998 %\cite{millerlamb98}%http://adsabs.harvard.edu/abs/1998ApJ...499L..37M
+, Poutanen, Gierlinski 2003 ~\cite{poutagierlinskisax}). In the S+D approximation the effects of general relativity (gravitational light-bending) are modeled as though the star is not rotating using the Schwarzschild metric and the formalism specified by
+Pechenick, Ftaclas and Cohen (1983)~\cite{pechenick}. Rotational effects have been approximated by using special relativistic Doppler transformations as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
+
+%Rotational effects are added by introducing Doppler terms as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
 
 The observed pulse profiles from AMXPs appear to be rather close to sinusoidal with peak-to-peak oscillation amplitude 
 \be \label{eq:amplitude}
 A = \frac{F_{\mathrm{max}} - F_{\mathrm{min}}} {F_{\mathrm{max}} - F_{\mathrm{min}}}
-\ee
- between 4 and 12 per cent \cite{poutarew2006}. This amplitude depends only weakly on energy and the spectrum may be fitted with a two-component model (blackbody and Comptonization). The weak energy dependence and a fairly constant spectral shape as a function of pulse phase, support also the idea that the bulk of the observed X-ray emission originates from polar caps (where the gas stream channelled by the neutron star magnetic field impacts the stellar surface forming a shock). Any additional source of radiation would have to have a spectrum identical to that of the shock.
+\ee %https://arxiv.org/pdf/astro-ph/0510038v2.pdf
+ between 4 and 12 per cent \cite{poutarew2006}. Light bending tend to reduce the variability amplitude. The amplitude depends only weakly on energy and the spectrum may be fitted with a two-component model (blackbody and Comptonization). At higher energies the amplitude deviate more from a sine wave because of the different emission pattern. The weak energy dependence and a fairly constant spectral shape as a function of pulse phase, support also the idea that the bulk of the observed X-ray emission originates from polar caps (where the gas stream channeled by the neutron star magnetic field impacts the stellar surface forming a shock). Any additional source of radiation would have to have a spectrum identical to that of the shock.
 
 
 \subsubsection{Oblateness}
 
-Due to the fast rotation the millisecond pulsars have an oblate shape instead of spherical. The difference between an oblate and a spherical star is significant when the rotation frequency $\nu \ge 300 \, \mathrm{Hz}$ %a place for a reference..
-. The most important effect is purely geometrical: The directions that the light can be emitted into are different in these two cases. Thus there are certain spot locations on the star where the spot is visible if the surface is oblate but would be invisible if the surface where spherical (and vice versa).
+Due to the fast rotation the millisecond pulsars have an oblate shape instead of spherical. The difference between an oblate and a spherical star is significant when the rotation frequency $\nu \ge 300 \, \mathrm{Hz}$ \cite{cadeau}%a place for a reference..
+. The most important effect is purely geometrical: The directions that the light can be emitted into are different in the cases of an oblate and a spherical star. Thus there are certain spot locations on the star where the spot is invisible if the surface is oblate but would be visible if the surface were spherical (and vice versa).
 
 
 There are different models describing the exact shape and oblateness of the neutron star (function $R(\theta)$, where $\theta$ is the colatitude measured from the spin axis).
@@ -368,7 +387,7 @@ where G = c = 1)
 
 \begin{equation}
 \label{rtheta2}
-\frac{R(\theta)}{R_{\mathrm{eq}}} = (1 + o_{2}(x,\bar{\Omega})),
+\frac{R(\theta)}{R_{\mathrm{eq}}} = (1 + o_{2}(x,\bar{\Omega})\cos^{2}(\theta)),
 \end{equation}
 where
 
@@ -397,24 +416,21 @@ In these equations $R_{\mathrm{eq}}$ is the radius of the rotating star measured
 \subsubsection{Geometry}
 
 Besides the geometry of the star itself, we also need to know relations between different angles in different frames. To derive these we consider a small spot on the stellar surface at colatitude $\theta$ from the rotational pole (for a similar derivation see e.g. \cite{poutabelo}). 
-The star is assumed to be rotating  with frequency $\nu=P^{-1}$ (seen by a distant observer).
-The velocity of the spot in units of $c$ as measured in the non-rotating frame is 
+The star is assumed to be rotating  with a frequency $\nu=P^{-1}$ (seen by a distant observer).
+The velocity of the spot in units of $c$ as measured by a local observer is 
 \begin{equation}
 \label{beta2}
-x = \frac{v}{c}=\frac{2\pi R(\theta)}{c} \frac{\nu}{\sqrt{1-u}} \sin\theta =\beta_{\rm eq}(\theta) \sin\theta,
+\beta = \frac{v}{c}=\frac{2\pi R(\theta)}{c} \frac{\nu}{\sqrt{1-u}} \sin\theta =\beta_{\rm eq}(\theta) \sin\theta,
 \end{equation}
-where $\beta_{\rm eq}$ would be constant if the star was spherical, $u\equiv\rg/R(\theta)$, 
-$\rg=2GM/c^2$ is the Schwarzschild radius, $M$ is mass and $R$ is
-radius of the star at spot location (given by equation \ref{rtheta2}). The pulsar frequency has been corrected for the gravitational redshift $1/\sqrt{1-u}=1+z$, since the rotation frequency seen by observer is reduced in the gravitational field of the star due to the gravitational time dilation. The corresponding Lorentz factor for the velocity of the spot is $\Gamma=(1-\beta^2)^{-1/2}$.
+where $\beta_{\rm eq}$ would be constant if the star were spherical, $u\equiv\rg/R(\theta)$, 
+$\rg=2GM/c^2$ is the Schwarzschild radius, $M$ is mass and $R(\theta)$ is
+radius of the star at spot location (given by equation \ref{rtheta2}). The pulsar frequency has been corrected for the gravitational redshift $1/\sqrt{1-u}=1+z$, since the rotation frequency seen by distant observer is reduced in the gravitational field of the star due to the gravitational time dilation. The corresponding Lorentz factor for the velocity of the spot is $\Gamma=(1-\beta^2)^{-1/2}$.
 
-
-
-Spot area measured in the corotating frame is $\d S^\prime$, and its instantaneous position in
-the fixed lab frame is described by the unit vector 
+Because of the fast rotation and special relativistic effects, spot area measured in a corotating frame $\d S^\prime$ is not same as the area measured in a non-rotating frame $dS$. The instantaneous position of the spot in the fixed lab frame is described by the unit vector 
 \begin{equation}
 \bmath{r}=(\sin\theta\cos\phi, \sin\theta\sin\phi, \cos\theta),
 \end{equation}
-that points to the spot from the star center (see Fig. ~\ref{fig:geom2}). The rotational phase of the pulsar is $\phi=2\pi\nu t$. The vector $\bmath{r}$ is not always directed perpendicular to the surface of the spot unless the star is spherical. The vector that points normal to the surface is given by
+that points to the spot from the center of the star (see Fig. ~\ref{fig:geom2}). The rotational phase of the pulsar is $\phi=2\pi\nu t$. The vector $\bmath{r}$ is not usually directed perpendicular to the surface of the spot unless if the star is spherical. The vector that points normal to the surface is given by
 \begin{equation}
 \bmath{n}=(\sin(\theta-\gamma)\cos\phi, \sin(\theta-\gamma)\sin\phi, \cos(\theta-\gamma)).
 \end{equation}
@@ -442,7 +458,7 @@ In case of a spherical star $\frac{dR}{d\theta} = 0$ and thus $\bmath{n} = \bmat
 
 %We will start the waveform with the center of the spot in the plane defined... 
 The computation of the waveform is started from the center of the spot in the plane defined by the spin axis and the direction to the observer 
-(when the spot crosses the plane defined by $\bmath{z}$ and $\bmath{k}$). The light pulse originating at this moment at the point that is directly below the observer and with a reference distance to the center of the star (e.g. the equator radius of the star) is used to define the zero of the observer's time coordinate. The time is zero when this photon arrives at the observer. 
+(when the spot crosses the plane defined by $\bmath{z}$ and $\bmath{k}$). The light pulse originating at this moment at the point that is directly below the observer and with a reference distance to the center of the star (e.g. the equator radius of the star) is used to define the zero of the observer's time coordinate. The time is set to zero when this photon arrives at the observer. 
 
 
 
@@ -455,13 +471,19 @@ Thus
 \be \label{eq:psi2}
   \cos\psi=\bmath{k}\cdot \bmath{r} = \cos i\ \cos\theta+\sin i\ \sin \theta\ \cos\phi,
 \ee
-Angle $\psi$ measures the apparent inclination of the spot to the line of
-sight, which is different from the true inclination because of
-the light bending effect. %IS THIS CORRECT?
+
+Angle $\psi$ measures the angle between the line of sight and the position vector $\bmath{r}$ of the spot. The initial angle of the emitted photon with respect to
+ ${\mathbf r}$ differs from $\psi$ because of the light bending.
+
+%Angle $\psi$ measures the apparent inclination of the spot to the line of
+%sight, which is different from the true inclination because of
+%the light bending effect. %IS THIS CORRECT?
+
+
 % The initial angle of the emitted photon with respect to the normal
 % ${\mathbf n}$ differs from $\psi$ because of the light bending.
 We denote the initial direction of the emitted photon by $\bmath{k}_0$ %($\bmath{l}$ in figure \ref{fig:geom2})
-and the true emission angle (relative to the radius vector) by $\alpha$, so that
+and the true emission angle (relative to $\bmath{r}$) by $\alpha$, so that
 \be
  \cos\alpha=\bmath{k}_0 \cdot \bmath{r}.
 \ee
@@ -469,19 +491,23 @@ The zenith angle $\sigma$ between the $\bmath{n}$ and $\bmath{k_{0}}$ is defined
 \be
 \cos\sigma = \bmath{k_{0}}\cdot\bmath{n}.
 \ee
-As a photon propagates to infinity, its direction changes from
-$\bmath{k}_0$ near the stellar surface to $\bmath{k}$ at infinity,
-so that $\cos\alpha=\bmath{k}_0\cdot\bmath{r}$
+
+The direction of the photon changes from $\bmath{k}_0$ near the stellar surface to $\bmath{k}$ at infinity as it propagates to infinity, so that $\cos\alpha=\bmath{k}_0\cdot\bmath{r}$
 changes to $\cos\psi=\bmath{k}\cdot\bmath{r}$.
+%As a photon propagates to infinity, its direction changes from
+%$\bmath{k}_0$ near the stellar surface to $\bmath{k}$ at infinity,
+%so that $\cos\alpha=\bmath{k}_0\cdot\bmath{r}$
+%changes to $\cos\psi=\bmath{k}\cdot\bmath{r}$.
 The relation between $\bmath{k}_0$ and $\bmath{k}$ may be written as
 \be\label{eq:k02}
 \bmath{k}_0=[ \sin\alpha\ \bmath{k} +\sin(\psi-\alpha)\ \bmath{r}]/\sin\psi.
 \ee
-At any moment of time, we can introduce an instantaneous non-rotating frame $x,y,z$ 
-with the $y$-axis along the direction of the spot motion, 
-$x$-axis along the meridian towards the equator, and 
-$z$-axis along the normal  to the spot.
-In this static frame 
+%At any moment of time, we can introduce an instantaneous non-rotating frame $x,y,z$ 
+%with the $y$-axis along the direction of the spot motion, 
+%$x$-axis along the meridian towards the equator, and 
+%$z$-axis along the normal  to the spot.
+%In this static frame
+We would like to express this vector in the frame of the spot instead of the frame shown in Fig 1. As a first step we do the coordinate transformation to an instantaneous non-rotating frame $x,y,z$ with the $y$-axis along the direction of the spot motion, $x$-axis along the meridian towards the equator, and $z$-axis along the normal  to the spot. This frame can be introduced in any moment of time. In this static frame
 \be 
 \bmath{k}_0=
 \left( 
@@ -497,7 +523,7 @@ where $\xi$ is the angle  between the spot velocity and $\bmath{k}_0$ :
 =\frac{\sin\alpha}{\sin\psi} \frac{\bmath{\beta}}{\beta} \cdot \bmath{k}=
 - \frac{\sin\alpha}{\sin\psi}\sin i\ \sin\phi\ ,
 \ee
-since $\bmath{\beta} = \beta(-\sin\phi,\cos\phi,0)$ in lab frame. And $\epsilon$ is the angle between the meridian 
+since $\bmath{\beta} = \beta(-\sin\phi,\cos\phi,0)$ in the lab frame. And $\epsilon$ is the angle between the meridian 
 \be
  \bmath{m} = (\cos(\theta - \gamma)\cos \phi ,\cos (\theta -\gamma)\sin \phi, -\sin (\theta -\gamma))
 \ee
@@ -512,10 +538,10 @@ and $\bmath{k}_0$:
 
 %But also $\bmath{\beta}$ (y-axis) and $\bmath{n}$ (z-axis)should be perpendicular???? Okey, I think it is both same time .. +if you choose $\bmath{r}$ as z-axis, then the z-component of $\bmath{k_{0}}$ will be $\cos\alpha$)
 
-Emission angle in the corotating frame relative to the surface normal is denoted by
+Next we can consider otherwise a similar frame but instead of static instantaneous we express the direction of the emitted light in a frame, which is corotating with the spot. Emission angle in the corotating frame relative to the surface normal is denoted by
 $\sigma'$.  It differs from $\sigma$ because of relativistic aberration. The rays of light are tilted towards the direction of the spot motion relative to the observer.
-In the frame comoving with the spot 
-(with $y$-axis along the spot motion, $z$-axis along the local normal), 
+In this frame comoving with the spot 
+(with $y$-axis again along the spot motion and $z$-axis along the local normal), 
 the unit vector along the photon momentum  is 
 obtained from the Lorentz transformation: 
 \be \label{eq:k0prime2}
@@ -544,16 +570,16 @@ Making use of equation (\ref{eq:k02}) the zenith angle has the value
 \cos \alpha  \cos \gamma + \frac{\sin \alpha}{\sin \psi} \sin \gamma (\cos i \sin \theta - \sin i \cos \theta \cos \phi),
 \end{split}
 \ee
-where the spherical trigonometric identity $\cos i = \cos\theta\cos\psi+\sin\theta\sin\psi\cos\delta$ (where $\delta$ is the angle between spot-observer and spot-spin-axis planes) and the equation (\ref{eq:psi2}) are used. With small bending angles the approximation $\frac{\sin \alpha}{\sin \psi} \approx \sqrt{(1-u)}$ is used (\cite{beloborodov}). 
+where the spherical trigonometric identity $\cos i = \cos\theta\cos\psi+\sin\theta\sin\psi\cos\delta$ (where $\delta$ is the angle between spot-observer and spot-spin-axis planes) and the equation (\ref{eq:psi2}) are used. With small bending angles the approximation $\frac{\sin \alpha}{\sin \psi} \approx \sqrt{(1-u)}$ may be used (based on Beloborodov's approximation \cite{beloborodov}). 
 %if $\sin\psi\sin\theta \ne 0$. If $\sin\psi\sin\theta = 0$, then $\cos\sigma = \cos\alpha\cos\gamma$.
 The equation \ref{eq:cossigma2} is useful, since we need to know the emission angle relative to the spot normal ($\sigma$) in order to calculate fluxes and visibility conditions. 
 
 
 \subsubsection{Light bending}
 
-Before we can get the angle $\sigma$ from equation \ref{eq:cossigma2} we also need first to know how to get the angle $\alpha$ when we know the light bending angle $\psi$. The angles $\psi$ we know (for every point at every phase) directly from the geometry, since we can calculate them using the equation \ref{eq:psi2}. In case of non-infinitesimal spot we of course need a  transformation of coordinates between the spot frame and the frame of the star (to get corresponding $\theta$ and $\phi$ for every point inside the spot). The angle $\psi$ is anyway straight determined, since we are going to calculate the trajectories for only those photons which are going to arrive at the observer (not in some other direction). The task is now to find out the true emission angle $\alpha$ using general relativity. 
+Before we can get the angle $\sigma$ from equation \ref{eq:cossigma2} we also need first to know how to get the angle $\alpha$ when we know the light bending angle $\psi$. The angles $\psi$ we know (for every point at every phase) directly from the geometry, since we can calculate them using the equation \ref{eq:psi2}. In case of non-infinitesimal spot (which is discussed more in the Section 2.1.6) we of course need a  transformation of coordinates between the spot frame and the frame of the star (to get corresponding $\theta$ and $\phi$ for every point inside the spot). The angle $\psi$ is anyway straight determined, since we are going to calculate the trajectories for only those photons which are going to arrive at the observer (not in some other direction). The task is now to find out the true emission angle $\alpha$ using general relativity. 
 
-The exact relation between $\alpha$ and $\psi$ (when $\alpha < \pi/2$) in Schwarzschild geometry (i.e. light bending) is given by \cite{mtw} %\citep[e.g.][]{mtw73}
+The exact relation between $\alpha$ and $\psi$ (when $\alpha < \pi/2$) in Schwarzschild geometry (i.e. light bending) is given by (e.g. Misner et al. 1973 \cite{mtw}) %\citep[e.g.][]{mtw73}
 \be \label{eq:bend2}
   \psi_{p}(R,\alpha)=\int_R^{\infty} \frac{dr}{r^2} \left[ \frac{1}{b^2} -
        \frac{1}{r^2}\left( 1- \frac{\rg}{r}\right)\right]^{-1/2} ,
@@ -772,7 +798,7 @@ The idea is to split the spot into a number of small sub-spots and compute the p
 \ee
 where the factor $[1+f^{2}(\theta)]^{1/2}$ takes care of the oblateness of the spot surface (function $f(\theta)$ is given in equation \ref{eq:ftheta}).
 
-In this model we assumed a spherically symmetric spot (the angle measured from the spot center to the end of the spot is constant). The shape of the spot could also be modelled with a more complicated model. For a large spot (angular radius $\sim$30 deg) at least a few tens points in total are needed if one wants to achieve accuracy of the order of 1\%.
+In this model we assumed a spherically symmetric spot (the angle measured from the spot center to the end of the spot is constant). The shape of the spot could also be modeled with a more complicated model. For a large spot (angular radius $\sim$30 deg) at least a few tens points in total are needed if one wants to achieve accuracy of the order of 1\%.
 
 %Alternatively, one could use the HEALPIX representation of the spot, or any other %routine. For a large spot (angular radius $\sim$30 deg), 
 %at least a few tens points in total are needed if one wants to achieve accuracy of %the order of 1\%. 
@@ -786,7 +812,7 @@ The new versions of the waveform code have been tested by comparing the pulse pr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=mor3test.eps,width=8.0cm}}
-\caption{The light curves for light emitted from one infinitesimal spot with parameters given in the Figure 3 of Morsink et. al. (2007) \cite{morsink}. The blue dotted curve is the result of Morsink and the black solid line is our result.
+\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with parameters given in the Figure 3 of Morsink et. al. (2007) \cite{morsink}. The blue dotted curve is the result of Morsink and the black solid line is our result.
 \label{fig:mor3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -795,7 +821,7 @@ The new versions of the waveform code have been tested by comparing the pulse pr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=cad3test.eps,width=8.0cm}}
-\caption{The light curves for light emitted from one infinitesimal spot with parameters given in the Figure 3 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of Cadeau and the black solid line is our result.
+\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with parameters given in the Figure 3 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of Cadeau and the black solid line is our result.
 \label{fig:cad3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -804,7 +830,7 @@ The new versions of the waveform code have been tested by comparing the pulse pr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=cad4test.eps,width=8.0cm}}
-\caption{The light curves for light emitted from one infinitesimal spot with parameters given in the Figure 4 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of Cadeau and the black solid line is our result.
+\caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with parameters given in the Figure 4 of Cadeau et. al. (2006) \cite{cadeau}. The blue dotted curve is the result of Cadeau and the black solid line is our result.
 \label{fig:cad4}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -994,7 +1020,7 @@ We see that $i$ and $\theta$ can be changed in the equation \ref{eq:amplitude_in
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
-\centerline{\epsfig{file=synt_sax_pol2.png,width=10.0cm}}
+\centerline{\epsfig{file=synt_sax_pol2.png,width=17.0cm}}
 \caption{Synthetic data: Normalized number fluxes as function of phase at different energies for $i = 75 \deg$ and $\theta = 5 \deg$. Other parameters are shown in the Table \ref{table:params}.
 \label{fig:syntpol2}}
 \end{figure}
@@ -1003,7 +1029,7 @@ We see that $i$ and $\theta$ can be changed in the equation \ref{eq:amplitude_in
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
-\centerline{\epsfig{file=synt_sax_eq2.png,width=10.0cm}}
+\centerline{\epsfig{file=synt_sax_eq2.png,width=17.0cm}}
 \caption{Synthetic data: Normalized number fluxes as function of phase at different energies for $i = 5 \deg$ and $\theta = 75 \deg$. Other parameters are shown in the Table \ref{table:params}.
 \label{fig:synteq2}}
 \end{figure}
@@ -1021,7 +1047,7 @@ To exploit all the possible computational power we have also made it possible to
 
 The choice of the reference radius $r_{\mathrm{ref}}$ needed in time delay calculation effects only on the phase shift of the waveform. Since we want to simulate a realistic situation where the phase shift is unknown, we use different $r_{\mathrm{ref}}$ in the creation of the data and in the fitting procedure of the ensemble sampler.  
 
-The likelihood of the data for each sample ($p(D|\textbf{y})$ in equation \ref{eq:bayes}) is calculated by fitting the data to the pulse profile model. To be more specific, we assume that the probability density of the data fluxes $F_{\mathrm{data}}$ given the modelled fluxes $F_{\mathrm{model}}$  is normally distributed around the $F_{\mathrm{model}}$ with the known errors as standard deviation ($\sigma$ in the following equation): 
+The likelihood of the data for each sample ($p(D|\textbf{y})$ in equation \ref{eq:bayes}) is calculated by fitting the data to the pulse profile model. To be more specific, we assume that the probability density of the data fluxes $F_{\mathrm{data}}$ given the modeled fluxes $F_{\mathrm{model}}$  is normally distributed around the $F_{\mathrm{model}}$ with the known errors as standard deviation ($\sigma$ in the following equation): 
 \be \label{eq:gaussprob}
 p(F_{\mathrm{data}}|F_{\mathrm{model}}) = \exp (\frac{-(F_{\mathrm{data}}-F_{\mathrm{model}})^{2}}{2\sigma^{2}}).
 \ee
@@ -1039,7 +1065,7 @@ As a second step we make the prior probabilities of inclination and spot colatit
 \alpha = Z^{N-1}\frac{p(D|Y)p(Y)}{p(D|X_{t})p(X_{t})}.
 \ee
 
-It is not obvious what kind of prior probabilities one should use. It depends on how tight constraints we can get to the given parameter. Unlike in case of normal flux, the measured polarization differ significantly if $i$ and $\theta$ are switched \cite{poutaviironen}. Thus from modelling the polarization we can get the prior probability distributions to these parameters. In this thesis we choose to use normally distributed prior probabilities of $i$ and $\theta$ around $0 \degree$ or $90 \degree$ to study the effect on the posterior probabilities of mass and radius. The standard deviation of that distribution is chosen to be $15 \degree$. 
+It is not obvious what kind of prior probabilities one should use. It depends on how tight constraints we can get to the given parameter. Unlike in case of normal flux, the measured polarization differ significantly if $i$ and $\theta$ are switched \cite{poutaviironen}. Thus from modeling the polarization we can get the prior probability distributions to these parameters. In this thesis we choose to use normally distributed prior probabilities of $i$ and $\theta$ around $0 \degree$ or $90 \degree$ to study the effect on the posterior probabilities of mass and radius. The standard deviation of that distribution is chosen to be $15 \degree$. 
 
 Other prior probabilities of the parameters are kept always uniform inside their sampling intervals. The sizes of these intervals are the same than the sizes of the corresponding axes in the posterior probability plots in the next section. 
 
@@ -1095,6 +1121,23 @@ The angular size of the spot $\rho$ is the best-fitted parameter in our sampling
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\centerline{\epsfig{file=ac_fpol.pdf,width=17.0cm}}
+\caption{Autocorrelations
+\label{fig:acexample}}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\centerline{\epsfig{file=weights_example.pdf,width=17.0cm}}
+\caption{Weights
+\label{fig:wexample}}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
